=== 2.2.1 / 2008-09-24
This version provides some minor fixes and enhancements to 2.2.0 intended
to polish RDoc for Ruby 1.9.1.

* 3 Minor Enhancements
  * Support for parsing RDoc from SWIG.  Ruby patch #10742 by Gonzalo
    Garramuno, #13993 by Steven Jenkins.
  * Simple support for Perl POD documentation.  Patch by Hugh Sasse.
  * Changed the default character set of RDoc's output from iso-8859-1 to
    utf-8.

* 9 Bug Fixes
  * Explicitly set the html template's text color, so that the generated
    documentation will display correctly on browsers with custom text and
    background color settings (patch by Luther Thompson).
  * Ensure that RDoc correctly will associate an alias and a method, even
    if it encounters the alias first because the alias lives in a different
    file.
  * Fix the parsing of multiline constants (patch by Chris Alfeld and
    Joel VanderWerf)
  * Make --exclude usuable.  Ruby patch #11671 by Trans.
  * Detect inline C functions.  Ruby Bug #11993 by Florian Frank.
  * Fix an issue in which RDoc might not document a class'
    superclass correctly if the class was defined in multiple files and
    depending on the order in which RDoc processed the files.  This should
    ensure that the child class -> parent class relationship is correct in
    ri documentation, allowing ri to lookup inherited methods (i.e., File.read).
  * Stop ri from crashing when it looks for a completely bogus method (i.e.,
    File#reada).  Now, ri exits with a helpful error message.
  * Fixed missing display of constant values in ri.
  * Fixed display of constants in ri's html output.

=== 2.2.0 / 2008-09-19
This version includes some significant enhancements to ri.  See RI.txt for
documentation about ri.

* 5 Major Enhancements
  * More extensive unit tests (special thanks to Chris Lowis for contributing
    a test).
  * Made ri twice as fast for the most common use case of displaying
    information for a class or a fully-qualified method